--- a/index.html
+++ b/index.html
@@ -25,10 +25,14 @@
         <!-- Add your site or application content here -->
 
         <section class="wrapper">
+            <div id="container">
+              <p> Hey, I'm Ema</p>
+            </div>
             <div id="content">
                 <p>I am a <span>Responsive Designer & Developer</span> who thrives on visual storytelling and the best user experience. When I'm not working, pursuing side projects or getting lost in the rabbit hole of blogs and books, I can be found traveling, hiking and searching for new stories.</p>
             </div>
         </section>
+
 
         <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.3/jquery.min.js"></script>
         <script>window.jQuery || document.write('<script src="js/vendor/jquery-1.11.3.min.js"><\/script>')</script>
